Added a photo gallery, added street pages, added a map page

--- a/belchroad.html
+++ b/belchroad.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Dirt Street</title>
+    <title>Belch Road</title>
 </head>
 <body>
     <div class="nav">
@@ -15,20 +15,20 @@
         <a href="photos.html">Photo Gallery</a>
       </div> 
     <div class="welcome">
-        <h1 class="title">Dirt Street</h1>
+        <h1 class="title">Belch Road</h1>
     </div>
     <div class="page">
         <figure>
-        <img src="DirtStreet.png">
-            <figcaption class="centercaption">Dirt Street</figcaption>
+        <a href="Belch Road.png" target="_blank" title="click to enlarge image"><img src="Belch Road.png"></a>
+            <figcaption class="centercaption">This road leads to Oak Street.</figcaption>
     </figure>
     <hr>
     <h2 class="title">Notable Locations</h2>
     <ul style="text-align: center; list-style: none;">
-        <li>Bell Tower</li><br>
-        <li>Bunker</li><br>
-        <li>Former Map Display</li><br>
-        <li>Old Neighborhood</li><br>
+        <li>News Board</li><br>
+        <li>Slop Restaurant</li><br>
+        <li>Item Shop</li><br>
+        <li>Subway Station</li>
     </ul>
     </div>
 
