--- a/streets.html
+++ b/streets.html
@@ -11,19 +11,20 @@
     <div class="nav">
         <a href="index.html">Home</a>
         <a href="streets.html">Streets</a>
-        <a href="info.html">Info</a>
-        <a href="mayor.html">Mayor's Office</a>
+        <a href="map.html">Map</a>
+        <a href="photos.html">Photo Gallery</a>
       </div> 
     <div class="welcome">
-        <h1 class="title">Welcome</h1>
+        <h1 class="title">Streets</h1>
+        <h3 style="text-align: center;">Click a street below to view info about it</h3>
     </div>
     <div class="page">
-        <ul>
-            <li><a href="dirtstreet.html">Dirt Street</a></li>
-            <li><a>Oak Street</a></li>
-            <li><a>Belch Road</a></li>
-            <li><a>Addict Lane</a></li>
-            <li><a>Drug Lab Road</a></li>
+        <ul style= "list-style: none; text-align: center;">
+            <li><a href="dirtstreet.html" style="text-decoration: none;" class="link">Dirt Street</a></li><br>
+            <li><a href="oakstreet.html" style="text-decoration: none;" class="link">Oak Street</a></li><br>
+            <li><a href="belchroad.html" style="text-decoration: none;" class="link">Belch Road</a></li><br>
+            <li><a href="addictlane.html" style="text-decoration: none;" class="link">Addict Lane</a></li><br>
+            <li><a href="druglabroad.html" style="text-decoration: none;" class="link">Drug Lab Road</a></li><br>
         </ul> 
     </div>
 </body>
