--- a/druglabroad.html
+++ b/druglabroad.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Home</title>
+    <title>Drug Lab Road</title>
 </head>
 <body>
     <div class="nav">
@@ -15,13 +15,19 @@
         <a href="photos.html">Photo Gallery</a>
       </div> 
     <div class="welcome">
-        <h1 class="title">Welcome</h1>
-        <h3 style="text-align: center;">Some features may not work properly on mobile devices!</h3>
+        <h1 class="title">Drug Lab Road</h1>
     </div>
     <div class="page">
-        <p class="bold">under construction</p>
-        <p><span class="bold">Server IP:</span> <span>-----------</span></p>
-        <p><span class="bold">Minecraft Version:</span> <span>1.19.4</span></p>
+        <figure>
+        <a href="DrugLabRoad.png" target="_blank" title="click to enlarge image"><img src="DrugLabRoad.png"></a>
+            <figcaption class="centercaption">There isn't a drug lab on this road yet.</figcaption>
+    </figure>
+    <hr>
+    <h2 class="title">Notable Locations</h2>
+    <ul style="text-align: center; list-style: none;">
+        <li>The Stand...</li><br>
+    </ul>
     </div>
+
 </body>
 </html>
