added some new pictures to the photo gallery

--- a/photos.html
+++ b/photos.html
@@ -39,6 +39,15 @@
             <a href="StevenMansion.png" title="click to enlarge image" target="_blank"><img src="StevenMansion.png" alt="Steven's Mansion" class="galleryimg"></a>
             <a href="Theatre.png" title="click to enlarge image" target="_blank"><img src="Theatre.png" alt="Theatre" class="galleryimg"></a>
             <a href="TownCenter.png" title="click to enlarge image" target="_blank"><img src="TownCenter.png" alt="The center of town" class="galleryimg"></a>
+            <a href="creeper1.png" title="click to enlarge image" target="_blank"><img src="creeper1.png" alt="Levitating creeper" class="galleryimg"></a>
+            <a href="creeper2.png" title="click to enlarge image" target="_blank"><img src="creeper2.png" alt="Levitating creeper" class="galleryimg"></a>
+            <a href="heads.png" title="click to enlarge image" target="_blank"><img src="heads.png" alt="heads in a basement! yuck!" class="galleryimg"></a>
+            <a href="eater.png" title="click to enlarge image" target="_blank"><img src="eater.png" alt="Experiment gone wrong" class="galleryimg"></a>
+            <a href="diseasebreach.png" title="click to enlarge image" target="_blank"><img src="diseasebreach.png" alt="the disease escaped" class="galleryimg"></a>
+            <a href="diseaselab.png" title="click to enlarge image" target="_blank"><img src="diseaselab.png" alt="The lab" class="galleryimg"></a>
+            <a href="airview.png" title="click to enlarge image" target="_blank"><img src="airview.png" alt="The town from the sky" class="galleryimg"></a>
+            <a href="carnage.png" title="click to enlarge image" target="_blank"><img src="carnage.png" alt="death" class="galleryimg"></a>
+            <a href="enderdragon_death.png" title="click to enlarge image" target="_blank"><img src="enderdragon_death.png" alt="Death of the Ender Dragon" class="galleryimg"></a>
           </div>
     </div>
 
