added more images to the gallery

--- a/photos.html
+++ b/photos.html
@@ -20,34 +20,36 @@
     </div>
     <div class="page">
         <div id="gallery">
-            <a href="AddictLane.png" title="click to enlarge image" target="_blank"><img src="AddictLane.png" alt="Addict Lane" class="galleryimg"></a>
-            <a href="Arena.png" title="click to enlarge image" target="_blank"><img src="Arena.png" alt="The Arena" class="galleryimg"></a>
-            <a href="Belch Road.png" title="click to enlarge image" target="_blank"><img src="Belch Road.png" alt="Belch Road" class="galleryimg"></a>
-            <a href="Bridge.png" title="click to enlarge image" target="_blank"><img src="Bridge.png" alt="The Bridge" class="galleryimg"></a>
-            <a href="Church.png" title="click to enlarge image" target="_blank"><img src="Church.png" alt="The Church" class="galleryimg"></a>
-            <a href="ChurchInterior.png" title="click to enlarge image" target="_blank"><img src="ChurchInterior.png" alt="Inside of the church" class="galleryimg"></a>
-            <a href="DirtStreet.png" title="click to enlarge image" target="_blank"><img src="DirtStreet.png" alt="Dirt Street" class="galleryimg"></a>
-            <a href="DrugLabRoad.png" title="click to enlarge image" target="_blank"><img src="DrugLabRoad.png" alt="Drug Lab Road" class="galleryimg"></a>
-            <a href="Mayor.png" title="click to enlarge image" target="_blank"><img src="Mayor.png" alt="The Mayor" class="galleryimg"></a>
-            <a href="MayorBuilding.png" title="click to enlarge image" target="_blank"><img src="MayorBuilding.png" alt="The Mayor's Building" class="galleryimg"></a>
-            <a href="McDonalds.png" title="click to enlarge image" target="_blank"><img src="McDonalds.png" alt="Mcdonald's" class="galleryimg"></a>
-            <a href="MethHouse.png" title="click to enlarge image" target="_blank"><img src="MethHouse.png" alt="Meth House" class="galleryimg"></a>
-            <a href="OakStreet.png" title="click to enlarge image" target="_blank"><img src="OakStreet.png" alt="Oak Street" class="galleryimg"></a>
-            <a href="SethRoad.png" title="click to enlarge image" target="_blank"><img src="SethRoad.png" alt="Seth Road" class="galleryimg"></a>
-            <a href="ShopsRoad.png" title="click to enlarge image" target="_blank"><img src="ShopsRoad.png" alt="Shops on the road" class="galleryimg"></a>
-            <a href="ShopsRow.png" title="click to enlarge image" target="_blank"><img src="ShopsRow.png" alt="Row of shops" class="galleryimg"></a>
-            <a href="StevenMansion.png" title="click to enlarge image" target="_blank"><img src="StevenMansion.png" alt="Steven's Mansion" class="galleryimg"></a>
-            <a href="Theatre.png" title="click to enlarge image" target="_blank"><img src="Theatre.png" alt="Theatre" class="galleryimg"></a>
-            <a href="TownCenter.png" title="click to enlarge image" target="_blank"><img src="TownCenter.png" alt="The center of town" class="galleryimg"></a>
-            <a href="creeper1.png" title="click to enlarge image" target="_blank"><img src="creeper1.png" alt="Levitating creeper" class="galleryimg"></a>
-            <a href="creeper2.png" title="click to enlarge image" target="_blank"><img src="creeper2.png" alt="Levitating creeper" class="galleryimg"></a>
-            <a href="heads.png" title="click to enlarge image" target="_blank"><img src="heads.png" alt="heads in a basement! yuck!" class="galleryimg"></a>
-            <a href="eater.png" title="click to enlarge image" target="_blank"><img src="eater.png" alt="Experiment gone wrong" class="galleryimg"></a>
-            <a href="diseasebreach.png" title="click to enlarge image" target="_blank"><img src="diseasebreach.png" alt="the disease escaped" class="galleryimg"></a>
-            <a href="diseaselab.png" title="click to enlarge image" target="_blank"><img src="diseaselab.png" alt="The lab" class="galleryimg"></a>
-            <a href="airview.png" title="click to enlarge image" target="_blank"><img src="airview.png" alt="The town from the sky" class="galleryimg"></a>
-            <a href="carnage.png" title="click to enlarge image" target="_blank"><img src="carnage.png" alt="death" class="galleryimg"></a>
-            <a href="enderdragon_death.png" title="click to enlarge image" target="_blank"><img src="enderdragon_death.png" alt="Death of the Ender Dragon" class="galleryimg"></a>
+            <a href="AddictLane.png" title="click to enlarge image (Addict Lane)" target="_blank"><img src="AddictLane.png" alt="Addict Lane" class="galleryimg"></a>
+            <a href="Arena.png" title="click to enlarge image (The Arena)" target="_blank"><img src="Arena.png" alt="The Arena" class="galleryimg"></a>
+            <a href="Belch Road.png" title="click to enlarge image (Belch Road)" target="_blank"><img src="Belch Road.png" alt="Belch Road" class="galleryimg"></a>
+            <a href="Bridge.png" title="click to enlarge image (The Bridge)" target="_blank"><img src="Bridge.png" alt="The Bridge" class="galleryimg"></a>
+            <a href="Church.png" title="click to enlarge image (The Church)" target="_blank"><img src="Church.png" alt="The Church" class="galleryimg"></a>
+            <a href="ChurchInterior.png" title="click to enlarge image (Inside of the church)" target="_blank"><img src="ChurchInterior.png" alt="Inside of the church" class="galleryimg"></a>
+            <a href="DirtStreet.png" title="click to enlarge image (Dirt Street)" target="_blank"><img src="DirtStreet.png" alt="Dirt Street" class="galleryimg"></a>
+            <a href="DrugLabRoad.png" title="click to enlarge image (Drug Lab Road)" target="_blank"><img src="DrugLabRoad.png" alt="Drug Lab Road" class="galleryimg"></a>
+            <a href="Mayor.png" title="click to enlarge image (The Mayor)" target="_blank"><img src="Mayor.png" alt="The Mayor" class="galleryimg"></a>
+            <a href="MayorBuilding.png" title="click to enlarge image (The Mayor's Building)" target="_blank"><img src="MayorBuilding.png" alt="The Mayor's Building" class="galleryimg"></a>
+            <a href="McDonalds.png" title="click to enlarge image (Mcdonald's)" target="_blank"><img src="McDonalds.png" alt="Mcdonald's" class="galleryimg"></a>
+            <a href="MethHouse.png" title="click to enlarge image (Meth House)" target="_blank"><img src="MethHouse.png" alt="Meth House" class="galleryimg"></a>
+            <a href="OakStreet.png" title="click to enlarge image (Oak Street)" target="_blank"><img src="OakStreet.png" alt="Oak Street" class="galleryimg"></a>
+            <a href="SethRoad.png" title="click to enlarge image (Seth Road)" target="_blank"><img src="SethRoad.png" alt="Seth Road" class="galleryimg"></a>
+            <a href="ShopsRoad.png" title="click to enlarge image (Shops on the road)" target="_blank"><img src="ShopsRoad.png" alt="Shops on the road" class="galleryimg"></a>
+            <a href="ShopsRow.png" title="click to enlarge image (Row of shops)" target="_blank"><img src="ShopsRow.png" alt="Row of shops" class="galleryimg"></a>
+            <a href="StevenMansion.png" title="click to enlarge image (Steven's Mansion)" target="_blank"><img src="StevenMansion.png" alt="Steven's Mansion" class="galleryimg"></a>
+            <a href="Theatre.png" title="click to enlarge image (Theatre)" target="_blank"><img src="Theatre.png" alt="Theatre" class="galleryimg"></a>
+            <a href="TownCenter.png" title="click to enlarge image (The center of town)" target="_blank"><img src="TownCenter.png" alt="The center of town" class="galleryimg"></a>
+            <a href="creeper1.png" title="click to enlarge image (Levitating creeper)" target="_blank"><img src="creeper1.png" alt="Levitating creeper" class="galleryimg"></a>
+            <a href="creeper2.png" title="click to enlarge image (Levitating creeper)" target="_blank"><img src="creeper2.png" alt="Levitating creeper" class="galleryimg"></a>
+            <a href="heads.png" title="click to enlarge image (heads in a basement! yuck!)" target="_blank"><img src="heads.png" alt="heads in a basement! yuck!" class="galleryimg"></a>
+            <a href="eater.png" title="click to enlarge image (Experiment gone wrong)" target="_blank"><img src="eater.png" alt="Experiment gone wrong" class="galleryimg"></a>
+            <a href="diseasebreach.png" title="click to enlarge image (the disease escaped)" target="_blank"><img src="diseasebreach.png" alt="the disease escaped" class="galleryimg"></a>
+            <a href="diseaselab.png" title="click to enlarge image (The lab)" target="_blank"><img src="diseaselab.png" alt="The lab" class="galleryimg"></a>
+            <a href="airview.png" title="click to enlarge image (The town from the sky)" target="_blank"><img src="airview.png" alt="The town from the sky" class="galleryimg"></a>
+            <a href="carnage.png" title="click to enlarge image (death)" target="_blank"><img src="carnage.png" alt="death" class="galleryimg"></a>
+            <a href="enderdragon_death.png" title="click to enlarge image (Death of the Ender Dragon)" target="_blank"><img src="enderdragon_death.png" alt="Death of the Ender Dragon" class="galleryimg"></a>
+            <a href="oldsmpmap2021.png" title="click to enlarge image (Old map of the smp from 2021)" target="_blank"><img src="oldsmpmap2021.png" alt="Old map of the smp from 2021" class="galleryimg"></a>
+            <a href="cliff.png" title="click to enlarge image (cliff)" target="_blank"><img src="cliff.png" alt="cliff" class="galleryimg"></a>
           </div>
     </div>
 
