added a new photo to the gallery

--- a/photos.html
+++ b/photos.html
@@ -50,6 +50,7 @@
             <a href="enderdragon_death.png" title="click to enlarge image (Death of the Ender Dragon)" target="_blank"><img src="enderdragon_death.png" alt="Death of the Ender Dragon" class="galleryimg"></a>
             <a href="oldsmpmap2021.png" title="click to enlarge image (Old map of the smp from 2021)" target="_blank"><img src="oldsmpmap2021.png" alt="Old map of the smp from 2021" class="galleryimg"></a>
             <a href="cliff.png" title="click to enlarge image (cliff)" target="_blank"><img src="cliff.png" alt="cliff" class="galleryimg"></a>
+             <a href="raid.png" title="click to enlarge image (raid)" target="_blank"><img src="raid.png" alt="raid" class="galleryimg"></a>
           </div>
     </div>
 
