--- a/index.html
+++ b/index.html
@@ -9,20 +9,32 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="nav">
-        <a href="index.html">Home</a>
-        <a href="streets.html">Streets</a>
-        <a href="map.html">Map</a>
-        <a href="photos.html">Photo Gallery</a>
-      </div> 
     <div class="welcome">
-        <h1 class="title">Welcome</h1>
+        <h1 class="title">SMP Wiki</h1>
         <h3 style="text-align: center;">Some features may not work properly on mobile devices!</h3>
     </div>
+    <div class="nav">
+        <a href="index.html" class="navbtn">Home</a>
+        <a href="streets.html" class="navbtn">Streets</a>
+        <a href="map.html" class="navbtn">Map</a>
+        <a href="photos.html" class="navbtn">Photo Gallery</a>
+        <a href="history.html" class="navbtn" onclick="NoPage()">Historical Events</a>
+      </div> 
     <div class="page">
         <p class="bold">under construction</p>
         <p><span class="bold">Server IP:</span> <span>-----------</span></p>
         <p><span class="bold">Minecraft Version:</span> <span>1.19.4</span></p>
     </div>
 </body>
+<script>
+    function NoPage() {
+      var txt;
+      if (alert("This page doesn't exist yet.")) {
+        txt = "Closed";
+      } else {
+        txt = "Closed";
+      }
+      document.getElementById("closed").innerHTML = txt;
+    }
+    </script>
 </html>
