added history page, changed style of lists

--- a/history.html
+++ b/history.html
@@ -6,46 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="icon.png">
-    <title>Streets</title>
+    <title>Historical Events</title>
 </head>
 <body>
     <div class="welcome">
-        <h1 class="title">Streets</h1>
-        <h3 style="text-align: center;">Click a street below to view info about it</h3>
+        <h1 class="title">Historical Events</h1>
     </div>
     <div class="nav">
         <a href="index.html" class="navbtn">Home</a>
         <a href="streets.html" class="navbtn">Streets</a>
         <a href="map.html" class="navbtn">Map</a>
         <a href="photos.html" class="navbtn">Photo Gallery</a>
-        <a href="history.html" class="navbtn" >Historical Events</a>
+        <a href="history.html" class="navbtn">Historical Events</a>
       </div> 
     <div class="page">
         <table class="history">
             <thead>
             <tr>
-                <th>List of streets</th>
+                <th>List of historical events in order</th>
             </tr>
             </thead>
             <tbody>
             <tr>
-                <td><a href="dirtstreet.html" style="text-decoration: none;" class="link">Dirt Street</a></td>
+                <td>March 2021: SMP is started</td>
             </tr>
             <tr>
-                <td><a href="oakstreet.html" style="text-decoration: none;" class="link">Oak Street</a></td>
+                <td>April 16 2021: <a href="oldsmpmap2021.png" target="_blank" class="link">The SMP map is created</a></td>
             </tr>
             <tr>
-                <td><a href="belchroad.html" style="text-decoration: none;" class="link">Belch Road</a></td>
+                <td>May or June 2021: The disc incident</td>
             </tr>
             <tr>
-                <td><a href="addictlane.html" style="text-decoration: none;" class="link">Addict Lane</a></td>
+                <td>July 2021: SMP dies</td>
             </tr>
             <tr>
-                <td><a href="druglabroad.html" style="text-decoration: none;" class="link">Drug Lab Road</a></a></td>
+                <td>February 2023: Revival</td>
+            </tr>
+            <tr>
+                <td>April 2023: <a href="Church.png" target="_blank" class="link">A church is made to appease the god</a></td>
+            </tr>
+            <tr>
+                <td>May 2023: God grows increasingly angry</td>
             </tr>
             </tbody>
         </table>
     </div>
+
 </body>
 <script>
     function NoPage() {
