--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="streets.html" class="navbtn">Streets</a>
         <a href="map.html" class="navbtn">Map</a>
         <a href="photos.html" class="navbtn">Photo Gallery</a>
-        <a href="history.html" class="navbtn" onclick="NoPage()">Historical Events</a>
+        <a href="history.html" class="navbtn">Historical Events</a>
       </div> 
     <div class="page">
         <p class="bold">under construction</p>
