Added two streets and a picture to the gallery

--- a/photos.html
+++ b/photos.html
@@ -55,6 +55,7 @@
             <a href="raid.png" title="click to enlarge image (raid)" target="_blank"><img src="raid.png" alt="raid" class="galleryimg"></a>
             <a href="curse1.png" title="click to enlarge image (The curse)" target="_blank"><img src="curse1.png" alt="The curse" class="galleryimg"></a>
             <a href="curse2.png" title="click to enlarge image (The curse)" target="_blank"><img src="curse2.png" alt="The curse" class="galleryimg"></a>
+            <a href="frogfields.png" title="click to enlarge image (Frog Fields)" target="_blank"><img src="frogfields.png" alt="Frog Fields" class="galleryimg"></a>
           </div>
     </div>
 
