--- a/streets.html
+++ b/streets.html
@@ -43,6 +43,12 @@
             <tr>
                 <td><a href="druglabroad.html" style="text-decoration: none;" class="link">Drug Lab Road</a></a></td>
             </tr>
+            <tr>
+                <td><a href="taterroad.html" style="text-decoration: none;" class="link">Tater Road</a></a></td>
+            </tr>
+            <tr>
+                <td><a href="fingerbreakingbadstreet.html" style="text-decoration: none;" class="link">Finger Breaking Bad Street</a></a></td>
+            </tr>
             </tbody>
         </table>
     </div>
