--- a/fingerbreakingbadstreet.html
+++ b/fingerbreakingbadstreet.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="icon.png">
-    <title>Home</title>
+    <title>Finger Breaking Bad Street</title>
 </head>
 <body>
     <div class="welcome">
-        <h1 class="title">SMP Archives</h1>
-        <h3 style="text-align: center;">Some features may not work properly on mobile devices!</h3>
+        <h1 class="title">Finger Breaking Bad Street</h1>
     </div>
     <div class="nav">
         <a href="index.html" class="navbtn">Home</a>
@@ -21,10 +20,23 @@
         <a href="history.html" class="navbtn">Historical Events</a>
       </div> 
     <div class="page">
-        <p class="bold">under construction</p>
-        <p><span class="bold">Server IP:</span> <span>-----------</span></p>
-        <p><span class="bold">Minecraft Version:</span> <span>1.19.4</span></p>
+        <figure>
+        <a href="fingerbreakingbadroad1.png" target="_blank"><img src="fingerbreakingbadroad1.png"></a>
+            <figcaption class="centercaption">Finger Breaking Bad Street</figcaption>
+    </figure><br>
+    <div class="page">
+        <figure>
+        <a href="fingerbreakingbadroad2.png" target="_blank"><img src="fingerbreakingbadroad2.png"></a>
+            <figcaption class="centercaption">more finger breaking bad street</figcaption>
+    </figure>
+    <hr>
+    <h2 class="title">Notable Locations</h2>
+    <ul style="text-align: center; list-style: none;">
+        <li>The Mines</li><br>
+        <li>Desert</li>
+    </ul>
     </div>
+
 </body>
 <script>
     function NoPage() {
