added more photos to the gallery and changed the style of some lists

--- a/addictlane.html
+++ b/addictlane.html
@@ -25,10 +25,18 @@
             <figcaption class="centercaption">This road leads into the Swamp.</figcaption>
     </figure>
     <hr>
-    <h2 class="title">Notable Locations</h2>
-    <ul style="text-align: center; list-style: none;">
-        <li>None yet!</li><br>
-    </ul>
+    <table class="history">
+      <thead>
+      <tr>
+          <th>Notable Locations</th>
+      </tr>
+      </thead>
+      <tr>
+          <td>Nothing yet</td>
+      </tr>
+      
+      </tbody>
+  </table>
     </div>
 
 </body>
