--- a/belchroad.html
+++ b/belchroad.html
@@ -25,13 +25,24 @@
             <figcaption class="centercaption">This road leads to Oak Street.</figcaption>
     </figure>
     <hr>
-    <h2 class="title">Notable Locations</h2>
-    <ul style="text-align: center; list-style: none;">
-        <li>News Board</li><br>
-        <li>Slop Restaurant</li><br>
-        <li>Item Shop</li><br>
-        <li>Subway Station</li>
-    </ul>
+    <table class="history">
+      <thead>
+      <tr>
+          <th>Notable Locations</th>
+      </tr>
+      </thead>
+      <tr>
+          <td>News Board</td>
+      </tr>
+        <tr>
+            <td>Shops</td>
+        </tr>
+          <tr>
+              <td>Subway Station</td>
+          </tr>
+      
+      </tbody>
+  </table>
     </div>
 
 </body>
