--- a/dirtstreet.html
+++ b/dirtstreet.html
@@ -25,13 +25,23 @@
             <figcaption class="centercaption">Dirt Street</figcaption>
     </figure>
     <hr>
-    <h2 class="title">Notable Locations</h2>
-    <ul style="text-align: center; list-style: none;">
-        <li>Bell Tower</li><br>
-        <li>Bunker</li><br>
-        <li>Former Map Display</li><br>
-        <li>Old Neighborhood</li><br>
-    </ul>
+    <table class="history">
+      <thead>
+      <tr>
+          <th>Notable Locations</th>
+      </tr>
+      </thead>
+      <tr>
+          <td>Bell Tower</td>
+      </tr>
+        <tr>
+            <td>Old Neighborhood</td>
+        </tr>
+          <tr>
+              <td>The Bunker</td>
+          </tr>  
+      </tbody>
+  </table>
     </div>
 
 </body>
