--- a/druglabroad.html
+++ b/druglabroad.html
@@ -25,10 +25,19 @@
             <figcaption class="centercaption">There isn't a drug lab on this road yet.</figcaption>
     </figure>
     <hr>
-    <h2 class="title">Notable Locations</h2>
-    <ul style="text-align: center; list-style: none;">
-        <li>The Stand...</li><br>
-    </ul>
+    <table class="history">
+      <thead>
+      <tr>
+          <th>Notable Locations</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+          <td>The Stand...</td>
+      </tr>
+      
+      </tbody>
+  </table>
     </div>
 
 </body>
