--- a/fingerbreakingbadstreet.html
+++ b/fingerbreakingbadstreet.html
@@ -30,11 +30,23 @@
             <figcaption class="centercaption">more finger breaking bad street</figcaption>
     </figure>
     <hr>
-    <h2 class="title">Notable Locations</h2>
-    <ul style="text-align: center; list-style: none;">
-        <li>The Mines</li><br>
-        <li>Desert</li>
-    </ul>
+    <table class="history">
+      <thead>
+      <tr>
+          <th>Notable Locations</th>
+      </tr>
+      </thead>
+      <tbody>
+        <tr>
+            <td>The Mines</td>
+        </tr>
+        <tbody>
+          <tr>
+              <td>Desert</td>
+          </tr>
+      
+      </tbody>
+  </table>
     </div>
 
 </body>
