--- a/oakstreet.html
+++ b/oakstreet.html
@@ -26,12 +26,22 @@
             <figcaption class="centercaption">A dictator Jelly poster can be seen on the light post.</figcaption>
     </figure>
     <hr>
-    <h2 class="title">Notable Locations</h2>
-    <ul style="text-align: center; list-style: none;">
-        <li>The Prison</li><br>
-        <li>Museum</li><br>
-        <li>Abandoned House</li><br>
-    </ul>
+    <table class="history">
+      <thead>
+      <tr>
+          <th>Notable Locations</th>
+      </tr>
+      </thead>
+      <tr>
+          <td>The Prison</td>
+      </tr>
+        <tr>
+            <td>Abandoned House</td>
+        </tr>
+          <tr>
+              <td>Museum</td>
+          </tr>
+  </table>
     </div>
 
 </body>
