--- a/photos.html
+++ b/photos.html
@@ -56,6 +56,10 @@
             <a href="curse1.png" title="click to enlarge image (The curse)" target="_blank"><img src="curse1.png" alt="The curse" class="galleryimg"></a>
             <a href="curse2.png" title="click to enlarge image (The curse)" target="_blank"><img src="curse2.png" alt="The curse" class="galleryimg"></a>
             <a href="frogfields.png" title="click to enlarge image (Frog Fields)" target="_blank"><img src="frogfields.png" alt="Frog Fields" class="galleryimg"></a>
+            <a href="frog1.png" title="click to enlarge image (Frog)" target="_blank"><img src="frog1.png" alt="Frog" class="galleryimg"></a>
+            <a href="frog2.png" title="click to enlarge image (Frog)" target="_blank"><img src="frog2.png" alt="Frog" class="galleryimg"></a>
+            <a href="methouse2.png" title="click to enlarge image (Meth House)" target="_blank"><img src="methouse2.png" alt="Meth House" class="galleryimg"></a>
+            <a href="swamphouse.png" title="click to enlarge image (Swamp House)" target="_blank"><img src="swamphouse.png" alt="Swamp House" class="galleryimg"></a>
           </div>
     </div>
 
