--- a/taterroad.html
+++ b/taterroad.html
@@ -30,10 +30,17 @@
             <figcaption class="centercaption">more tater road</figcaption>
     </figure>
     <hr>
-    <h2 class="title">Notable Locations</h2>
-    <ul style="text-align: center; list-style: none;">
-        <li>fucking nothing</li><br>
-    </ul>
+  
+    <table class="history">
+      <thead>
+      <tr>
+          <th>Notable Locations</th>
+      </tr>
+      </thead>
+      <tr>
+          <td>Nothing yet.</td>
+      </tr>
+  </table>
     </div>
 
 </body>
