links are no longer turn purple when visted

--- a/history.html
+++ b/history.html
@@ -34,10 +34,10 @@
                 <td>April 16 2021: <a href="oldsmpmap2021.png" target="_blank" class="link">The SMP map is created</a></td>
             </tr>
             <tr>
-                <td>May/June 2021: The disc incident</td>
+                <td>May or June 2021: The disc incident</td>
             </tr>
             <tr>
-                <td>January 2022: SMP dies</td>
+                <td>July 2021: SMP dies</td>
             </tr>
             <tr>
                 <td>February 2023: Revival</td>
