added more photos to the gallery

--- a/photos.html
+++ b/photos.html
@@ -60,6 +60,10 @@
             <a href="frog2.png" title="click to enlarge image (Frog)" target="_blank"><img src="frog2.png" alt="Frog" class="galleryimg"></a>
             <a href="methouse2.png" title="click to enlarge image (Meth House)" target="_blank"><img src="methouse2.png" alt="Meth House" class="galleryimg"></a>
             <a href="swamphouse.png" title="click to enlarge image (Swamp House)" target="_blank"><img src="swamphouse.png" alt="Swamp House" class="galleryimg"></a>
+            <a href="cloudwras.png" title="click to enlarge image (cloudwras)" target="_blank"><img src="cloudwras.png" alt="cloudwras" class="galleryimg"></a>
+            <a href="run.png" title="click to enlarge image (run)" target="_blank"><img src="run.png" alt="run" class="galleryimg"></a>
+            <a href="lantern.png" title="click to enlarge image (lantern)" target="_blank"><img src="lantern.png" alt="lantern" class="galleryimg"></a>
+            <a href="drain.png" title="click to enlarge image (drain)" target="_blank"><img src="drain.png" alt="drain" class="galleryimg"></a>
           </div>
     </div>
 
