added images to the gallery and made a new page

--- a/addictlane.html
+++ b/addictlane.html
@@ -22,7 +22,7 @@
     <div class="page">
         <figure>
         <a href="AddictLane.png" target="_blank" title="click to enlarge image"><img src="AddictLane.png"></a>
-            <figcaption class="centercaption">This road leads into the Swamp.</figcaption>
+            <figcaption>This road leads into the Swamp.</figcaption>
     </figure>
     <hr>
     <table class="history">
