--- a/belchroad.html
+++ b/belchroad.html
@@ -22,7 +22,7 @@
     <div class="page">
         <figure>
         <a href="Belch Road.png" target="_blank" title="click to enlarge image"><img src="Belch Road.png"></a>
-            <figcaption class="centercaption">This road leads to Oak Street.</figcaption>
+            <figcaption>This road leads to Oak Street.</figcaption>
     </figure>
     <hr>
     <table class="history">
