--- a/dirtstreet.html
+++ b/dirtstreet.html
@@ -22,7 +22,7 @@
     <div class="page">
         <figure>
         <img src="DirtStreet.png">
-            <figcaption class="centercaption">Dirt Street</figcaption>
+            <figcaption>Dirt Street</figcaption>
     </figure>
     <hr>
     <table class="history">
