--- a/druglabroad.html
+++ b/druglabroad.html
@@ -22,7 +22,7 @@
     <div class="page">
         <figure>
         <a href="DrugLabRoad.png" target="_blank" title="click to enlarge image"><img src="DrugLabRoad.png"></a>
-            <figcaption class="centercaption">There isn't a drug lab on this road yet.</figcaption>
+            <figcaption>There isn't a drug lab on this road yet.</figcaption>
     </figure>
     <hr>
     <table class="history">
