--- a/fingerbreakingbadstreet.html
+++ b/fingerbreakingbadstreet.html
@@ -22,12 +22,12 @@
     <div class="page">
         <figure>
         <a href="fingerbreakingbadroad1.png" target="_blank"><img src="fingerbreakingbadroad1.png"></a>
-            <figcaption class="centercaption">Finger Breaking Bad Street</figcaption>
+            <figcaption>Finger Breaking Bad Street</figcaption>
     </figure><br>
     <div class="page">
         <figure>
         <a href="fingerbreakingbadroad2.png" target="_blank"><img src="fingerbreakingbadroad2.png"></a>
-            <figcaption class="centercaption">more finger breaking bad street</figcaption>
+            <figcaption>more finger breaking bad street</figcaption>
     </figure>
     <hr>
     <table class="history">
