--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <div class="welcome">
         <h1 class="title">SMP Archives</h1>
-        <h3 style="text-align: center;">Some features may not work properly on mobile devices!</h3>
     </div>
     <div class="nav">
         <a href="index.html" class="navbtn">Home</a>
@@ -21,7 +20,7 @@
         <a href="history.html" class="navbtn">Historical Events</a>
       </div> 
     <div class="page">
-        <p class="bold">under construction</p>
+        <p class="bold">Under construction</p>
         <p><span class="bold">Server IP:</span> <span>-----------</span></p>
         <p><span class="bold">Minecraft Version:</span> <span>1.19.4</span></p>
     </div>
