--- a/map.html
+++ b/map.html
@@ -22,7 +22,7 @@
     <div class="page">
         <figure>
             <a href="TownMap.png" target="_blank" title="click to enlarge image"><img src="TownMap.png"></a>
-            <figcaption style="text-align: center;">The map as of April 2023.</figcaption>
+            <figcaption>The map as of April 2023.</figcaption>
         </figure>
     </div>
 
