--- a/photos.html
+++ b/photos.html
@@ -64,6 +64,11 @@
             <a href="run.png" title="click to enlarge image (run)" target="_blank"><img src="run.png" alt="run" class="galleryimg"></a>
             <a href="lantern.png" title="click to enlarge image (lantern)" target="_blank"><img src="lantern.png" alt="lantern" class="galleryimg"></a>
             <a href="drain.png" title="click to enlarge image (drain)" target="_blank"><img src="drain.png" alt="drain" class="galleryimg"></a>
+            <a href="restaurant.jpg" title="click to enlarge image (restaurant)" target="_blank"><img src="restaurant.jpg" alt="restaurant" class="galleryimg"></a>
+            <a href="redhouse.png" title="click to enlarge image (red house)" target="_blank"><img src="redhouse.png" alt="red house" class="galleryimg"></a>
+            <a href="houses.png" title="click to enlarge image (houses)" target="_blank"><img src="houses.png" alt="houses" class="galleryimg"></a>
+            <a href="whitehouse.png" title="click to enlarge image (white house)" target="_blank"><img src="whitehouse.png" alt="white house" class="galleryimg"></a>
+            <a href="sunset.png" title="click to enlarge image (sunset)" target="_blank"><img src="sunset.png" alt="sunset" class="galleryimg"></a>
           </div>
     </div>
 
