--- a/taterroad.html
+++ b/taterroad.html
@@ -22,12 +22,12 @@
     <div class="page">
         <figure>
         <a href="taterroad1.png" target="_blank"><img src="taterroad1.png"></a>
-            <figcaption class="centercaption">Tater Road</figcaption>
+            <figcaption>Tater Road</figcaption>
     </figure><br>
     <div class="page">
         <figure>
         <a href="taterroad2.png" target="_blank"><img src="taterroad2.png"></a>
-            <figcaption class="centercaption">more tater road</figcaption>
+            <figcaption>more tater road</figcaption>
     </figure>
     <hr>
   
