--- a/villageroad.html
+++ b/villageroad.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="icon.png">
-    <title>Oak Street</title>
+    <title>Village Road</title>
 </head>
 <body>
     <div class="welcome">
-        <h1 class="title">Oak Street</h1>
+        <h1 class="title">Village Road</h1>
     </div>
     <div class="nav">
         <a href="index.html" class="navbtn">Home</a>
@@ -19,13 +19,22 @@
         <a href="photos.html" class="navbtn">Photo Gallery</a>
         <a href="history.html" class="navbtn">Historical Events</a>
       </div> 
-
     <div class="page">
         <figure>
-        <a href="OakStreet.png" target="_blank" title="click to enlarge image"><img src="OakStreet.png"></a>
-            <figcaption>A dictator Jelly poster can be seen on the light post.</figcaption>
+            <a href="houses.png" target="_blank"><img src="houses.png"></a>
+                <figcaption>Neighborhood Entrance</figcaption>
+        </figure><br>
+        <figure>
+        <a href="redhouse.png" target="_blank"><img src="redhouse.png"></a>
+            <figcaption>Red house</figcaption>
+    </figure><br>
+    <div class="page">
+        <figure>
+        <a href="whitehouse.png" target="_blank"><img src="whitehouse.png"></a>
+            <figcaption>White house</figcaption>
     </figure>
     <hr>
+  
     <table class="history">
       <thead>
       <tr>
@@ -33,14 +42,8 @@
       </tr>
       </thead>
       <tr>
-          <td>The Prison</td>
+          <td>Neighborhood</td>
       </tr>
-        <tr>
-            <td>Abandoned House</td>
-        </tr>
-          <tr>
-              <td>Museum</td>
-          </tr>
   </table>
     </div>
 
